src/main/kotlin/com/example/kweb/error/model/ErrorMessage.kt
package com.example.kweb.error.model

object ErrorMessage {
    const val ITEM_NOT_FOUND = "Item not found."
}
